Updates to fix errors

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 <p><strong>redbook.me</strong> is a new and simple way to build rosters and manage the availability of your staff. It&#8217;s light-weight, web-based and cloud hosted (so you don&#8217;t have to install anything!). <strong>redbook.me</strong> frees you from the hassle of spreadsheets and paper rosters.</p>
 
-<p><img src='redbook.me.flow.png' alt='' /></p>
+<p><img src='./redbook.me.flow.png' alt='' /></p>
 
 <h3 id='features'>Features</h3>
 
@@ -121,14 +121,14 @@
 
 <li>Automaticall import shifts into any calander app (like iCalender or Outlook)</li>
 
-<li><strong><a href='/how.html'>Learn more&#8230;</a></strong></li>
+<li><strong><a href='./how.html'>Learn more&#8230;</a></strong></li>
 </ul>
 
 <h2 id='how_much_does_it_cost'>How much does it cost?</h2>
 
 <p>Pricing starts at <strong>$AU 15 / month</strong> for 1 store or site.</p>
 
-<p>To get access to a free <strong>2 month</strong> trial, <a href='/trial.html'>click here</a></p>
+<p>To get access to a free <strong>2 month</strong> trial, <a href='./trial.html'>click here</a></p>
 
 <p>Got heaps of stores? <a href='mailto:chris@rednesstech.com'>Let&#8217;s have a chat</a></p>
 
@@ -141,7 +141,7 @@
 <p>The name? Well it all started when I used to manage a small pizza shop where we used a <em>red book</em> to organise when staff would be available. It was clumsy and staff were forever forgetting to write in their availability. So I built a website to help me and that&#8217;s where <strong>redbook.me</strong> came from!</p>
 				</div>
 			</div>
-			<footer><a href="rednesstech.com">Rednesstech</a> &copy; <?php echo date( "Y" ); ?></footer>
+			<footer><a href="http://rednesstech.com">Rednesstech</a> &copy; <?php echo date( "Y" ); ?></footer>
 		</div>
 	</body>
 </html>
