--- a/how.html
+++ b/how.html
@@ -106,20 +106,20 @@
 
 <p>Your staff log into Redbook.me and tell you when they can work</p>
 
-<p><img src='/availabilities.png' alt='' /></p>
+<p><img src='./availabilities.png' alt='' /></p>
 
 <p>You build your roster using <strong>redbook.me</strong></p>
 
-<p><img src='roster.png' alt='' /></p>
+<p><img src='./roster.png' alt='' /></p>
 
-<p><img src='addshift.png' alt='' /></p>
+<p><img src='./addshift.png' alt='' /></p>
 
 <p>Done! Now get back to what you do best - running your business!</p>
 
-<p><a href='/trial.html'>Sign up for a free trial!</a></p>
+<p><a href='./trial.html'>Sign up for a free trial!</a></p>
 				</div>
 			</div>
-			<footer><a href="rednesstech.com">Rednesstech</a> &copy; <?php echo date( "Y" ); ?></footer>
+			<footer><a href="http://rednesstech.com">Rednesstech</a> &copy; <?php echo date( "Y" ); ?></footer>
 		</div>
 	</body>
 </html>
