--- a/trial.html
+++ b/trial.html
@@ -114,7 +114,7 @@
 	Please complete the following form to get access to your <b>redbook.me</b> trial system.
 </p>
 
-<form class="form-horizontal" method="POST" action="/submit.php">
+<form class="form-horizontal" method="POST" action="./submit.php">
 	<div class="control-group">
 		<label class="control-label" for="name">Name</label>
 		<div class="controls">
